<resources>
    <string name="app_name">Shopping Assistant</string>
    <string name="product_name">Product name:</string>
    <string name="product_description">Product description:</string>
    <string name="new_product_button">New Product</string>

    <string name="new_product">New Product</string>
    <string name="save_button">Save</string>
    <string name="new_product_name">Name<font color="#FF3F36">*</font></string>
    <string name="new_product_desc">Description</string>
    <string name="placeholder">Placeholder</string>
    <string name="checkbox">checkbox</string>
    <string name="delete_button">Delete</string>
</resources>